# comBGC-Filter

./: .gitignore  LICENSE.txt  README.md  combgc_summary.tsv  meta.yaml  pyproject.toml  requirements.txt
combgc/: README.md  comBGC.py  combgc.py  pyproject.toml
combgc/combgc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
combgc/functions/: antismash_workflow.py  deepbgc_workflow.py  filter.py  gecco_workflow.py
combgc/src/: comBGC.py
output/: combgc_summary.tsv
tests/: contig_metadata.tsv  sample_metadata.tsv
tests/antismash_example/ECO010-megahit/: index.html  log_ECO010-megahit.txt
tests/antismash_example/ECO010-megahit/clusterblast/: NODE_338_length_5055_cov_56.8_c1.txt  NODE_72_length_8481_cov_79.8_c1.txt
tests/antismash_example/ECO010-megahit/knownclusterblast/: NODE_259_length_5660_cov_107.3_c1.txt  NODE_338_length_5055_cov_56.8_c1.txt  NODE_3_length_18813_cov_105.5_c1.txt
tests/antismash_example/ECO010-megahit/knownclusterblast/region1/: gnl_Bakta_NCFMKG_00325_mibig_hits.html  gnl_Bakta_NCFMKG_03800_mibig_hits.html  gnl_Bakta_NCFMKG_05070_mibig_hits.html  gnl_Bakta_NCFMKG_05075_mibig_hits.html  gnl_Bakta_NCFMKG_09815_mibig_hits.html  gnl_Bakta_NCFMKG_12680_mibig_hits.html
tests/antismash_example/sample1-megahit/: NODE_106_length_7571_cov_86.5.region001.gbk  NODE_15_length_13587_cov_90.8.region001.gbk  NODE_259_length_5660_cov_107.3.region001.gbk  NODE_338_length_5055_cov_56.8.region001.gbk  NODE_381_length_4785_cov_56.0.region001.gbk  NODE_3_length_18813_cov_105.5.region001.gbk  NODE_72_length_8481_cov_79.8.region001.gbk  regions.js
tests/antismash_example/sample1-megahit/clusterblast/: NODE_106_length_7571_cov_86.5_c1.txt  NODE_15_length_13587_cov_90.8_c1.txt  NODE_259_length_5660_cov_107.3_c1.txt  NODE_3_length_18813_cov_105.5_c1.txt
tests/antismash_example/sample1-megahit/knownclusterblast/: NODE_106_length_7571_cov_86.5_c1.txt  NODE_15_length_13587_cov_90.8_c1.txt  NODE_381_length_4785_cov_56.0_c1.txt  NODE_72_length_8481_cov_79.8_c1.txt
tests/antismash_example/sample1-megahit/knownclusterblast/region1/: gnl_Bakta_NCFMKG_00295_mibig_hits.html  gnl_Bakta_NCFMKG_00315_mibig_hits.html  gnl_Bakta_NCFMKG_00320_mibig_hits.html  gnl_Bakta_NCFMKG_00330_mibig_hits.html  gnl_Bakta_NCFMKG_00335_mibig_hits.html  gnl_Bakta_NCFMKG_01145_mibig_hits.html  gnl_Bakta_NCFMKG_01150_mibig_hits.html  gnl_Bakta_NCFMKG_01160_mibig_hits.html  gnl_Bakta_NCFMKG_01165_mibig_hits.html  gnl_Bakta_NCFMKG_01175_mibig_hits.html  gnl_Bakta_NCFMKG_03790_mibig_hits.html  gnl_Bakta_NCFMKG_03815_mibig_hits.html  gnl_Bakta_NCFMKG_05090_mibig_hits.html  gnl_Bakta_NCFMKG_05100_mibig_hits.html  gnl_Bakta_NCFMKG_09800_mibig_hits.html  gnl_Bakta_NCFMKG_09810_mibig_hits.html  gnl_Bakta_NCFMKG_09825_mibig_hits.html  gnl_Bakta_NCFMKG_11715_mibig_hits.html  gnl_Bakta_NCFMKG_11720_mibig_hits.html  gnl_Bakta_NCFMKG_11725_mibig_hits.html  gnl_Bakta_NCFMKG_12690_mibig_hits.html
tests/deepbgc_example/ECO010-megahit/: ECO010-megahit.bgc.tsv
tests/deepbgc_example/sample1-megahit/: README.txt  sample1-megahit.antismash.json
tests/gecco_example/ECO010-megahit/: ECO010-megahit.features.tsv  NODE_381_length_4785_cov_56.0_cluster_1.gbk  NODE_944_length_3278_cov_61.8_cluster_1.gbk
tests/gecco_example/sample1-megahit/: NODE_2091_length_2099_cov_51.9_cluster_1.gbk  NODE_259_length_5660_cov_107.3_cluster_1.gbk  NODE_2713_length_1759_cov_56.0_cluster_1.gbk  NODE_338_length_5055_cov_56.8_cluster_1.gbk  NODE_757_length_3636_cov_86.1_cluster_1.gbk  sample1-megahit.clusters.tsv  sample1-megahit.genes.tsv
tests/output/: combgc_summary.tsv  combgc_summary_3_base.tsv  filtered_bgcs_meta.tsv
