[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comBGC"
version = "0.1.0"
description = "A tool that aggregates, filters and combines the results of BGC prediction tools: antiSMASH, deepBGC, and GECCO."
readme = "README.md"
license = "MIT"
authors = [{name = "Tom Richtermeier, Jasmin Frangenberg", email = "tom.richtermeier@gmx.de"}]
dependencies = [
    "biopython",
    "pandas",
    "argparse",
    "numpy"
]
keywords = ["biosynthetic-gene-clusters", "bioinformatics", "genes", "bgc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[project.scripts]
combgc = "combgc.comBGC:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8",
    "black"
]

[tool.setuptools.package-data]
your_package = ["LICENSE"]