[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comBGC"
version = "0.1.0"
description = "A tool that aggregates, filters and combines the results of BGC prediction tools: antiSMASH, deepBGC, and GECCO."
keywords = ["biosynthetic-gene-clusters", "bioinformatics", "genes", "bgc"]
readme = {file = "README.txt", content-type = "text/markdown"}
license = { text = "MIT License" }
authors = [
    { name = "Tom Richtermeier", email = "tom.richtermeier@gmx.de" },
    { name = "Jasmin Frangenberg", email = "jasmin.frangenberg@example.com" }
]
dependencies = [
    "biopython",
    "pandas",
    "numpy"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/tomrichtermeier/comBGC-Filter/"
Issues = "https://github.com/tomrichtermeier/comBGC-Filter/issues"


[project.scripts]
combgc = "comBGC:main"
